# attendee

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  Dockerfile.bot-runtime  Dockerfile.modal  README.md  dev.docker-compose.yaml  docker-compose.prod.yml  init_env.py  modal_bot_app.py  modal_settings.py  pyproject.toml  requirements.txt
.cursor/plans/: zoom_obf_token_核查_c7b4c33a.plan.md  zoom_录制路径优化_49d826e2.plan.md
.github/workflows/: ci.yml  codeql.yml
attendee/: celery.py  mail_backends.py  urls.py
attendee/settings/: base.py  bot_runtime.py  development.py  production.py
bots/: admin.py  app_session_api_utils.py  app_session_api_views.py  app_session_serializers.py  authentication.py  bot_adapter.py  bot_sso_views.py  bots_api_urls.py  bots_api_utils.py  bots_api_views.py  external_callback_utils.py  external_webhooks_views.py  internal_urls.py  internal_views.py  launch_bot_utils.py  launch_methods.py  meetbot_diarization.py  modal_launcher.py  models.py  projects_views.py  runtime_api_client.py  runtime_scheduler.py  runtime_snapshot.py  serializers.py  signature_utils.py  stripe_utils.py  transcription_utils.py  webhook_payloads.py  webhook_utils.py  zoom_oauth_connections_api_utils.py  zoom_oauth_connections_utils.py
bots/bot_controller/: bot_controller.py  gstreamer_pipeline.py  recording_chunk_uploader.py  screen_and_audio_recorder.py
bots/bot_pod_creator/: __init__.py  bot_pod_creator.py
bots/google_meet_bot_adapter/: google_meet_bot_adapter.py  google_meet_chromedriver_payload.js  google_meet_ui_methods.py
bots/migrations/: 0080_botruntimelease.py  0081_runtimecapacitysnapshot_and_gcp_provider.py  0082_alter_botruntimelease_snapshot_id.py  0083_backfill_recording_complete_upstream_signing_secret.py  0084_recording_file_max_length.py  0085_alter_zoomoauthconnection_is_onbehalf_token_supported.py  0086_alter_apikey_key_hash.py
bots/runtime_providers/: __init__.py  digitalocean.py  gcp_compute_engine.py  host_runtime.py  vps_docker.py
bots/tasks/: __init__.py  autopay_charge_task.py  deliver_webhook_task.py  launch_joining_bot_task.py  launch_meetbot_runtime_task.py  refresh_zoom_oauth_connection_task.py  restart_bot_pod_task.py  run_bot_task.py  sync_zoom_oauth_connection_task.py  validate_zoom_oauth_connections_task.py
bots/teams_bot_adapter/: teams_chromedriver_payload.js
bots/templatetags/: bot_filters.py
bots/tests/: test_bots_api_utils.py  test_can_open_chrome.py  test_digitalocean_runtime.py  test_gcp_runtime.py  test_launch_bot_utils.py  test_meetbot_global_diarization.py  test_modal_launch.py  test_recording_chunk_settings.py  test_run_scheduler_command.py  test_runtime_scheduler.py  test_screen_and_audio_recorder.py  test_teams_bot.py  test_zoom_oauth_connections_api_utils.py  test_zoom_oauth_connections_utils.py  test_zoom_web_bot.py
bots/web_bot_adapter/: web_bot_adapter.py
bots/webpage_streamer/: webpage_streamer.py
bots/zoom_bot_adapter/: zoom_bot_adapter.py
bots/zoom_rtms_adapter/: zoom_rtms_adapter.py
bots/zoom_web_bot_adapter/: zoom_web_chromedriver_payload.js  zoom_web_ui_methods.py
deploy/dev/: myvps.env.example
deploy/nginx/: meetbot.conf
deploy/production/: myvps.env.example
docs/: attendee_chunk_upload_refactor_and_voxella_api_handoff_zh.md  bot_meet_recording_upload_pipeline.md  client_recorder_chrome_plugin_zh.md  cost_reduction_pivot_zh.md  digitalocean_droplet_workflow_zh.md  digitalocean_droplets.md  digitalocean_first_snapshot_runbook.md  gcp_bot_worker_no_db_plan_zh.md  gcp_compute_engine_cold_start_optimization_zh.md  gcp_compute_engine_meetbot_plan_zh.md  gcp_compute_engine_runtime_zh.md  gcp_n2_golden_image_runbook_zh.md  modal_bot_launch.md  vps_meetbot_runtime_runbook_zh.md  zoom_rtms_web_ui_test_flow_zh.md
pg_sql/: README.md  docker-compose.yml
pg_sql/stunnel/: stunnel.conf  stunnel.key  stunnel.pem
scripts/: build_modal_image.sh  runtime_agent.py
scripts/deploy/: ensure-meetbot-self-signed-cert.sh
scripts/digitalocean/: attendee-bot-runner.service  attendee-bot-runner.sh  attendee-runtime-agent.service  create-snapshot.sh  create-template-droplet.sh  finalize_snapshot_remote.py  finalize_snapshot_via_userdata.py  finish_snapshot_from_existing_snapshot.sh  myvps.env.example  (+1 more)
(+10 files in other folders)
